# serenity-confessions

./: Cargo.toml  Shuttle.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230606_141731_change_id_to_u64_snowflake.rs  m20230606_152158_add_channels.rs  m20230608_104157_add_confessions_hashes.rs  m20230609_120307_add_guild_mod_role.rs  m20230609_122133_alter_mod_role_optional.rs  m20230611_042140_broaden_confessions_with_data.rs  m20230701_075643_managed_subjects.rs
src/: button.rs  database.rs  main.rs  router.rs  util.rs
src/auth/: mod.rs
src/commands/: mod.rs
src/commands/channel/: mod.rs
src/commands/confessions/: mod.rs
src/commands/guild/: mod.rs
src/commands/subjects/: mod.rs
src/commands/util/: mod.rs
src/entity/: channels.rs  confession_guild_hashes.rs  guild.rs  guild_confessions.rs  guild_members.rs  guild_subjects.rs  guild_user_subjects.rs  mod.rs  prelude.rs
src/operations/: channels.rs  confession_guild_hashes.rs  guild.rs  guild_confessions.rs  mod.rs  subjects.rs
