[package]
name = "confessions-bot"
version = "0.3.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.34.0"
anyhow = "1.0.71"
chrono = { version = "0.4.24", features = ["serde"] }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }
shuttle-secrets = "0.34.0"
shuttle-serenity = "0.34.0"
tokio = "1.28.2"
tracing = "0.1.37"
poise = "0.5.5"
axum = "0.6.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tower = "0.4.13"
rand = "0.8.5"
twox-hash = "1.6.3"

migration = { path = "migration" } # depends on your needs

[workspace]
members = [".", "migration"]

[dependencies.sea-orm]
version = "^0"
features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ]
